[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/StartScreen.gd" type="Script" id=1]

[node name="StartScreen" type="CenterContainer"]
pause_mode = 2
margin_right = 180.0
margin_bottom = 320.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 180.0
margin_bottom = 320.0
rect_min_size = Vector2( 180, 320 )
color = Color( 0.662745, 0.611765, 0.552941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 61.0
margin_top = 126.0
margin_right = 118.0
margin_bottom = 194.0

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 57.0
margin_bottom = 20.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 57.0
margin_bottom = 44.0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 57.0
margin_bottom = 68.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
